welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:4: error: ';' expected but 'def' found.
 }def isFacingTrail():Boolean = {
  ^